[ADD : Menu and Options correctely set up

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map.Map
+GameDefaultMap=/Game/L_Menu.L_Menu
 EditorStartupMap=/Game/Map.Map
 GameInstanceClass=/Script/NPCForge.NPCForgeGameInstance
 
